Added photos to repo rather than link to them; updated Stefan's

--- a/index.html
+++ b/index.html
@@ -210,13 +210,13 @@
 
               <p><h3>The <a target="_blank" href="http://www.linkedup-project.eu">LinkedUp Project</a> is a consortium of six partners: the Open Knowledge Foundation, Leibniz Universitat Hannover,  the Open University, Elsevier, the Open Universiteit Nederland, and eXact Learning Solutions. Funded by the European Commission in the FP7 programme, the LinkedUp Project aims to push forwards the use of open and linked data available on the Web, in particular for educational purposes.</h3></p>
 
-              <p><h3>These people make up the LinkedUp Challenge team:
-				<div class="twitterblock"><a target="_blank" href="https://twitter.com/stefandietze"><img src="https://si0.twimg.com/profile_images/1381195795/Copy_of_IMG_416_bigger.JPG" /></a><br />Stefan Dietze<br /> Project Coordinator</div>
-				<div class="twitterblock"><a target="_blank" href="https://twitter.com/eelcoherder"><img src="https://si0.twimg.com/profile_images/278007426/eelco_herder_klein_bigger.jpg" /></a><br />Eelco Herder<br /> Challenge Coordinator</div>
-				<div class="twitterblock"><a target="_blank" href="https://twitter.com/HDrachsler"><img src="https://si0.twimg.com/profile_images/1474064923/Hendrik-Drachsler_klein_bigger.jpg" /></a><br />Hendrik Drachsler<br /> Evaluation Chair</div>
-				<div class="twitterblock"><a target="_blank" href="https://twitter.com/mdaquin"><img src="https://si0.twimg.com/profile_images/330365695/me2_bigger.jpg" /></a><br />Mathieu d’Aquin<br /> Data and Support Coordinator</div>
-				<div class="twitterblock"><a target="_blank" href="https://twitter.com/mariekeguy"><img src="https://si0.twimg.com/profile_images/1926295776/marieke_2011b_bigger.jpg" /></a><br />Marieke Guy<br /> Dissemination Coordinator</div>
-				<div class="twitterblock"><a target="_blank" href="https://twitter.com/MLBrook"><img src="https://si0.twimg.com/profile_images/1167995136/Image001_quickFix2_bigger.jpg" /></a><br />Michelle Brook<br /> Community Coordinator</div></h3></p>
+              <p><h3>These people make up the LinkedUp Challenge team:<br />
+				<div class="twitterblock"><a target="_blank" href="https://twitter.com/stefandietze"><img src="images/StefanDietze.png" /></a><br />Stefan Dietze<br /> Project Coordinator</div>
+				<div class="twitterblock"><a target="_blank" href="https://twitter.com/eelcoherder"><img src="images/EelcoHerder.jpg" /></a><br />Eelco Herder<br /> Challenge Coordinator</div>
+				<div class="twitterblock"><a target="_blank" href="https://twitter.com/HDrachsler"><img src="images/HendrikDrachsler.jpg" /></a><br />Hendrik Drachsler<br /> Evaluation Chair</div>
+				<div class="twitterblock"><a target="_blank" href="https://twitter.com/mdaquin"><img src="images/MathieuDaquin.jpg" /></a><br />Mathieu d’Aquin<br /> Data and Support Coordinator</div>
+				<div class="twitterblock"><a target="_blank" href="https://twitter.com/mariekeguy"><img src="images/MariekeGuy.jpg" /></a><br />Marieke Guy<br /> Dissemination Coordinator</div>
+				<div class="twitterblock"><a target="_blank" href="https://twitter.com/MLBrook"><img src="images/MichelleBrook.jpg" /></a><br />Michelle Brook<br /> Community Coordinator</div></h3></p>
 				
 				<br clear="all" />
 				
