Added review panelists

--- a/index.html
+++ b/index.html
@@ -187,9 +187,32 @@
 
               <p><h3>The LinkedUp team have set up a <a target="_blank" href="http://data.linkededucation.org/linkedup/devtalk/">developer blog</a> and will be posting 'cooking recipes' and 'how to guides'. We’re also providing technical support on your code, so please <a href="mailto:contact@linkedup-challenge.org">email us</a> with any questions you have.  </h3></p>
 
-			  <h2>Who is judging the entries?</h2>
+			  <h2 id="reviewpanel">Who is judging the entries?</h2>
 
-              <p><h3>Entries will be reviewed by an evaluation committee, lead by Sören Auer (University of Leipzig), Balaji Venkataraman (Commonwealth of Learning), Dan Brickley (Google), and Philippe Cudre-Mauroux (EPFL). Submissions which receive the highest review ratings with be invited to present at <a target="_blank" href="http://okcon.org">OKCon</a> in September, where the audience will vote for the winners.</h3></p>
+              <h3><p>Entries will be reviewed by an evaluation committee, lead by the <a target="_blank" href="http://linkedup-project.eu/advisory-board/">LinkedUp advisory board</a>:</p>
+			  <ul>
+				<li>Sören Auer (University of Leipzig)</li>
+				<li>Balaji Venkataraman (Commonwealth of Learning)</li>
+				<li>Dan Brickley (Google)</li>
+				<li>Philippe Cudre-Mauroux (EPFL) </li>
+			  </ul>
+			  <br />
+			  <p>Additional reviewers are:</p>
+			  <ul>
+				<li><a target="_blank" href="http://dgasevic.athabascau.ca/">Dragan Gasevic</a>, Athabasca University, Canada</li>
+				<li><a target="_blank" href="http://people.epfl.ch/denis.gillet/bio?lang=en&cvlang=en">Denis Gillet</a>, EPFL, Switzerland</li>
+				<li><a target="_blank" href="http://www.marcokalz.de">Marco Kalz</a>, CELSTEC, Open University, Netherlands</li>
+				<li><a target="_blank" href="http://daviniahl.wordpress.com/">Davinia Hernández-Leo</a>, UPF, Spain</li>
+				<li><a target="_blank" href="http://sydney.academia.edu/AbelardoPardo">Abelardo Pardo</a>, University of Sydney, Australia</li>
+				<li><a target="_blank" href="http://www.cc.uah.es/msicilia/">Miguel-Angel Sicilia</a>, <a target="_blank" href="http://www.uah.es">University of Alcalá</a>, Spain</li>
+				<li><a target="_blank" href="http://kmi.open.ac.uk/people/member/fridolin-wild">Fridolin Wild</a>, KMI, Open University, UK</li>
+				<li><a target="_blank" href="http://kti.tugraz.at/about-kti/team/lindstaedt/">Stefanie Lindstaedt</a>, TU Graz, Austria</li>
+				<li><a target="_blank" href="https://twitter.com/jakeberger">Jake Berger</a>, BBC, UK</li>
+				<li><a target="_blank" href="http://www.wis.ewi.tudelft.nl/houben/">Geert-Jan Houben</a>, TU Delft, Netherlands</li>
+				<li><a target="_blank" href="http://etsii.uah.es/doctorado/Leonardo.html">Leonardo Lezcano</a>, CELSTEC, Open University, Netherlands</li>
+				<li><a target="_blank" href="http://www.few.vu.nl/~cgueret/">Christophe Guéret</a>, Data Archiving and Networked Services (DANS), Netherlands</li>			  
+			  </ul>
+			  <p>Submissions which receive the highest review ratings with be invited to present at <a target="_blank" href="http://okcon.org">OKCon</a> in September, where the audience will vote for the winners.</h3></p>
 
 			  <h2>What are the reviewing criteria?</h2>
 
