--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-33874954']);
+  _gaq.push(['_setAccount', 'UA-33874954-7']);
   _gaq.push(['_trackPageview']);
 
   (function() {
