--- a/veni.html
+++ b/veni.html
@@ -119,21 +119,20 @@ FavSync allows users to easily share and sync groups of bookmarks with other use
 <p><h3>Universidad de Valladolid, Universidad de Valladolid, Universidad de Valladolid, Universidad de Valladolid, Universidad de Valladolid, Universidad Carlos III de Madrid, Valladolid, Spain</h3></p>
 <p><h3>Several educational registries (e.g. Schoolforge or Ontoolsearch) provide information about ICT tools in order to help educators when discovering and selecting them. A common problem in these registries -which limits their utility-  is how their data is sustained, since educational descriptions of ICT tools are hard to create and maintain updated. In order to overcome this problem, some registries (e.g. Cool Tools For Schools) involve their communities of users in their sustainment, following a social approach. Unfortunately, three important drawbacks can be found in these registries: first, the well-known cold-start problem is present; second, their data models can not typically describe information about the educational use of ICT tools; third, these registries are isolated data silos that need to create and keep updated all the data they manage, thus increasing the overall effort of sustaining educational ICT tool datasets. For this reason we propose We-Share, a social annotation application that allows educators to search, create and enrich descriptions of ICT tools from the Web of Data. This characteristic enables We-Share to count with an initial dataset of 6760 ICT tool descriptions automatically gathered from the Web, which are automatically updated by periodically crawling the Web of Data. Further, We-Share enables the community of educators to enrich SEEK-AT-WD dataset reviewing ICT tools and relating them to the educational contexts where they were employed. All the data published on We-Share is available as Linked Open Data.<h3></p>
 
-<h4 style="text-align:right"><em>Demo: <a href=" http://seek.cloud.gsic.tel.uva.es/weshare/
-Its SPARQL endpoint can be accessed at: http://seek.rkbexplorer.com/sparql/">We-Share can be accessed at: http://seek.cloud.gsic.tel.uva.es/weshare/
-Its SPARQL endpoint can be accessed at: http://seek.rkbexplorer.com/sparql/</a></em></h4>
+<h4 style="text-align:right"><em>Demo: <a href=" http://seek.cloud.gsic.tel.uva.es/weshare/”> http://seek.cloud.gsic.tel.uva.es/weshare/</a>. 
+Its SPARQL endpoint can be accessed at: <a href=”http://seek.rkbexplorer.com/sparql/"> http://seek.rkbexplorer.com/sparql/"></a></em></h4>
  
 <h3><b>REthink, REassure, RElook, REsee, REmember, REdiscover. This is simple. This is ReCredible<b></h3>
 <p><h3><i>Entrepreneur: Vaidas Repecka, Senior scientist and spokesperson on things: Dr. Rytis Maskeliunas, Linguist and content advisor: Dr. Laura Merfeldiene</i></h3></p>
-<p><h3>Vaidas Repecka is a director of UAB ãInformacijos tinklasÒ (Founder company). The rest are young and popular academic professors: Dr. Rytis Maskeliunas from ãKaunas university of technologyÒ, and Dr. Laura Merfeldiene fromãVytautas Magnus universityÒ., Our team is situated in Kaunas, the heart of Lithuania. WeÕll be modest - the former capital of Lithuania ;)</h3></p>
-<p><h3>RE:THINK! All information is linked via topics maps, just like your mind does! Visualize the Moon related to The Earth as satellite, not as section in page 872 in your astronomy book!
-RE:ASSURE! Assure and improve your knowledge! Look for related articles via attached nodes.
-RE:STORE! Tap any node of information and it will expand to give you more information. No learning curve required, Very intuitive and very natural interface. As they say a child could use it! Drag and spin the fluid display of knowledge!
-RE:LOOK! Look at all knowledge as a whole, or shift into exploring a specific semantic tree mode. No more books!
-RE:CREATE! Search, create and share with Facebook! Use Twitter to tell the world, email your friends, or customize to add more services! All in one place for your convenience.
-RE:LEARN! ReCredible is great for educational purposes! Explore a wide selection of carefully selected topics, searching and browsing to find an exact information via visual semantic links.
-RE:MEMBER! Find the information and improve your memory with ReCredible topic maps!
-RE:DISCOVER! Find new information! Expand your knowledge! Use ReCredible!<h3></p>
+<p><h3>Vaidas Repecka is a director of UAB Informacijos tinklas (Founder company). The rest are young and popular academic professors: Dr. Rytis Maskeliunas from Kaunas university of technology, and Dr. Laura Merfeldiene from Vytautas Magnus university</h3></p>
+<ul><li>RE:THINK! All information is linked via topics maps, just like your mind does! Visualize the Moon related to The Earth as satellite, not as section in page 872 in your astronomy book!</li><li>
+RE:ASSURE! Assure and improve your knowledge! Look for related articles via attached nodes. </li><li>
+RE:STORE! Tap any node of information and it will expand to give you more information. No learning curve required, Very intuitive and very natural interface. As they say a child could use it! Drag and spin the fluid display of knowledge! </li><li>
+RE:LOOK! Look at all knowledge as a whole, or shift into exploring a specific semantic tree mode. No more books! </li><li>
+RE:CREATE! Search, create and share with Facebook! Use Twitter to tell the world, email your friends, or customize to add more services! All in one place for your convenience. </li><li>
+RE:LEARN! ReCredible is great for educational purposes! Explore a wide selection of carefully selected topics, searching and browsing to find an exact information via visual semantic links. </li><li>
+RE:MEMBER! Find the information and improve your memory with ReCredible topic maps! </li><li>
+RE:DISCOVER! Find new information! Expand your knowledge! Use ReCredible! </li></ul>
 
 <h4 style="text-align:right"><em>Demo: <a href="Our FREE Recredible application is hosted on an apple appstore (just search for ÒRecredibleÓ or use this link: https://itunes.apple.com/us/app/recredible/id620437846?mt=8). You could also try an alternative functionality of our engine online: via http://www.recredible.com/ (FREE as well), though we suggest going with an Ipad application for added functionality (i.e. an orbit view is not available online, a length of tree view is also limited due to browser rendering capabilities and so on.). WeÕd like to note, that an Android version is in development as well.">Our FREE Recredible application is hosted on an apple appstore (just search for ÒRecredibleÓ or use this link: https://itunes.apple.com/us/app/recredible/id620437846?mt=8). You could also try an alternative functionality of our engine online: via http://www.recredible.com/ (FREE as well), though we suggest going with an Ipad application for added functionality (i.e. an orbit view is not available online, a length of tree view is also limited due to browser rendering capabilities and so on.). WeÕd like to note, that an Android version is in development as well.</</a></em></h4>
  
@@ -310,3 +309,4 @@ http://github.com/gootyfer/moocrank</</a></em></h4>
   </div><!-- #wrapper -->
 </body>
 </html>
+
