--- a/veni.html
+++ b/veni.html
@@ -105,7 +105,7 @@
           </div>
 		
 
-		  <div id="first" name="first" class="block">
+		  <div id="favsyn" name=" favsyn” class="block">
               <h3><b>FavSync - Collect bookmarks together<b></h3>
 <p><h3><i>Vladi Trop, Raphael Glassberg, Peter Kollarovits</i></h3></p>
 <p><h3>FAVSYNC BVBA, Lint, Antwerp province, Begium</h3></p>
@@ -113,14 +113,23 @@
 FavSync allows users to easily share and sync groups of bookmarks with other users. Very effective to collect bookmarks as a group and work a project (Imagine Dropbox, just for bookmarks).<h3></p>
 
 <h4 style="text-align:right"><em>Demo: <a href=”https://www.favsync.com”>https://www.favsync.com</a></em></h4>
- 
+
+          </div>
+
+   <div id="weshare" name="weshare" class="block">
 <h3><b>We-Share: a social annotation application that publishes and retrieves information about educational ICT tools from the Web of Data<b></h3>
 <p><h3><i>Adolfo Ruiz-Calleja, Guillermo Vega-Gorgojo, Juan I. Asensio-P_rez, Eduardo G—mez-S‡nchez, Miguel L. Bote-Lorenzo, Carlos Alario-Hoyos</i></h3></p>
 <p><h3>Universidad de Valladolid, Universidad de Valladolid, Universidad de Valladolid, Universidad de Valladolid, Universidad de Valladolid, Universidad Carlos III de Madrid, Valladolid, Spain</h3></p>
 <p><h3>Several educational registries (e.g. Schoolforge or Ontoolsearch) provide information about ICT tools in order to help educators when discovering and selecting them. A common problem in these registries -which limits their utility-  is how their data is sustained, since educational descriptions of ICT tools are hard to create and maintain updated. In order to overcome this problem, some registries (e.g. Cool Tools For Schools) involve their communities of users in their sustainment, following a social approach. Unfortunately, three important drawbacks can be found in these registries: first, the well-known cold-start problem is present; second, their data models can not typically describe information about the educational use of ICT tools; third, these registries are isolated data silos that need to create and keep updated all the data they manage, thus increasing the overall effort of sustaining educational ICT tool datasets. For this reason we propose We-Share, a social annotation application that allows educators to search, create and enrich descriptions of ICT tools from the Web of Data. This characteristic enables We-Share to count with an initial dataset of 6760 ICT tool descriptions automatically gathered from the Web, which are automatically updated by periodically crawling the Web of Data. Further, We-Share enables the community of educators to enrich SEEK-AT-WD dataset reviewing ICT tools and relating them to the educational contexts where they were employed. All the data published on We-Share is available as Linked Open Data.<h3></p>
+<p></p>
 
 <h4 style="text-align:right"><em>Demo: <a href=" http://seek.cloud.gsic.tel.uva.es/weshare/”> http://seek.cloud.gsic.tel.uva.es/weshare/</a>. 
 Its SPARQL endpoint can be accessed at: <a href=”http://seek.rkbexplorer.com/sparql/"> http://seek.rkbexplorer.com/sparql/"></a></em></h4>
+
+</div>
+
+   <div id="rethink" name="rethink" class="block">
+
  
 <h3><b>REthink, REassure, RElook, REsee, REmember, REdiscover. This is simple. This is ReCredible<b></h3>
 <p><h3><i>Entrepreneur: Vaidas Repecka, Senior scientist and spokesperson on things: Dr. Rytis Maskeliunas, Linguist and content advisor: Dr. Laura Merfeldiene</i></h3></p>
@@ -134,7 +143,11 @@ RE:LEARN! ReCredible is great for educational purposes! Explore a wide selection
 RE:MEMBER! Find the information and improve your memory with ReCredible topic maps! </li><li>
 RE:DISCOVER! Find new information! Expand your knowledge! Use ReCredible! </li></ul>
 
-<h4 style="text-align:right"><em>Demo: <a href="Our FREE Recredible application is hosted on an apple appstore (just search for ÒRecredibleÓ or use this link: https://itunes.apple.com/us/app/recredible/id620437846?mt=8). You could also try an alternative functionality of our engine online: via http://www.recredible.com/ (FREE as well), though we suggest going with an Ipad application for added functionality (i.e. an orbit view is not available online, a length of tree view is also limited due to browser rendering capabilities and so on.). WeÕd like to note, that an Android version is in development as well.">Our FREE Recredible application is hosted on an apple appstore (just search for ÒRecredibleÓ or use this link: https://itunes.apple.com/us/app/recredible/id620437846?mt=8). You could also try an alternative functionality of our engine online: via http://www.recredible.com/ (FREE as well), though we suggest going with an Ipad application for added functionality (i.e. an orbit view is not available online, a length of tree view is also limited due to browser rendering capabilities and so on.). WeÕd like to note, that an Android version is in development as well.</</a></em></h4>
+<h4 style="text-align:right"><em>Demo: <a href="https://itunes.apple.com/us/app/recredible/id620437846?mt=8">https://itunes.apple.com/us/app/recredible/id620437846?mt=8</a></em></h4>
+
+</div>
+
+
  
 <h3><b>Course Finder<b></h3>
 <p><h3><i>Devon Walshe, Lizzie Brotherston</i></h3></p>
@@ -309,4 +322,5 @@ http://github.com/gootyfer/moocrank</</a></em></h4>
   </div><!-- #wrapper -->
 </body>
 </html>
+
 
