--- a/veni.html
+++ b/veni.html
@@ -93,7 +93,7 @@
 
 			</div>
         
-        </div><!-- .block -->
+        </div>
 
         <div id="what" name="what" class="block">
             <p><h3>The Veni Competiton ran between late May and late June 2013. People were invited to design and build innovative and robust prototypes and demos for tools that analyse and/or integrate open web data for educational purposes.</h3><br />
@@ -147,22 +147,19 @@ RE:DISCOVER! Find new information! Expand your knowledge! Use ReCredible! </li><
 
 </div>
 
-
+<div id="course" name="course" class="block">
  
 <h3><b>Course Finder<b></h3>
 <p><h3><i>Devon Walshe, Lizzie Brotherston</i></h3></p>
 <p><h3>TechCube, Scottish Government, Edinburgh, UK</h3></p>
-<p><h3>Our coursefinder app is a searchable map of every available course from Elementary level all the way to University. The data was compiled from multiple incomplete sources and government agencies, and merged into a simplified and complete dataset. 
+<p><h3>Our coursefinder app is a searchable map of every available course from Elementary level all the way to University. The data was compiled from multiple incomplete sources and government agencies, and merged into a simplified and complete dataset. <br />
 
 Learners can search through the dataset by subject, institution name, postcode, qualification type or SCQF level. Results are displayed on a map with a tool tip for more information and a web link to the institution home page. 
 
 This is the first time in Scottish history this type of information has been made publicly available, despite a number of official attempts.<h3></p>
 
-<h4 style="text-align:right"><em>Demo: <a href="http://ljdj.herokuapp.com/lapi
-
-http://github.com:azymuth/lapi.git">http://ljdj.herokuapp.com/lapi
-
-http://github.com:azymuth/lapi.git</</a></em></h4>
+<h4 style="text-align:right"><em>Demo: <a href="http://github.com:azymuth/lapi.git"> http://github.com:azymuth/lapi.git</a></em></h4>
+</div>
  
 <h3><b>Dr Hoo<b></h3>
 <p><h3><i>Lazaros Ioannidis
@@ -322,5 +319,6 @@ http://github.com/gootyfer/moocrank</</a></em></h4>
   </div><!-- #wrapper -->
 </body>
 </html>
+
 
 
