--- a/veni.html
+++ b/veni.html
@@ -103,9 +103,9 @@
 </h3>
             <br/><br/>
 			 
-          </div>
+          </div><!-- .block -->
           
-          	  <div id="favsyn" name="favsyn” class="block">
+           <div id="favsyn" name="favsyn" class="block">
               <h3><b>FavSync - Collect bookmarks together<b></h3>
 <p><h3><i>Vladi Trop, Raphael Glassberg, Peter Kollarovits</i></h3></p>
 <p><h3>FAVSYNC BVBA, Lint, Antwerp province, Begium</h3></p>
