--- a/veni.html
+++ b/veni.html
@@ -124,7 +124,7 @@ FavSync allows users to easily share and sync groups of bookmarks with other use
 <p></p>
 
 <h4 style="text-align:right"><em>Demo: <a href=" http://seek.cloud.gsic.tel.uva.es/weshare/”> http://seek.cloud.gsic.tel.uva.es/weshare/</a>. 
-Its SPARQL endpoint can be accessed at: <a href=”http://seek.rkbexplorer.com/sparql/"> http://seek.rkbexplorer.com/sparql/"></a></em></h4>
+Its SPARQL endpoint can be accessed at: <a href=”http://seek.rkbexplorer.com/sparql/">http://seek.rkbexplorer.com/sparql/</a></em></h4>
 
 </div>
 
