--- a/veni.html
+++ b/veni.html
@@ -128,6 +128,26 @@ Its SPARQL endpoint can be accessed at: <a href=”http://seek.rkbexplorer.com/s
 
 </div>
 
+<div id="rethink" name="rethink" class="block">
+
+ 
+<h3><b>REthink, REassure, RElook, REsee, REmember, REdiscover. This is simple. This is ReCredible<b></h3>
+<p><h3><i>Entrepreneur: Vaidas Repecka, Senior scientist and spokesperson on things: Dr. Rytis Maskeliunas, Linguist and content advisor: Dr. Laura Merfeldiene</i></h3></p>
+<p><h3>Vaidas Repecka is a director of UAB Informacijos tinklas (Founder company). The rest are young and popular academic professors: Dr. Rytis Maskeliunas from Kaunas university of technology, and Dr. Laura Merfeldiene from Vytautas Magnus university</h3></p>
+<ul><li>RE:THINK! All information is linked via topics maps, just like your mind does! Visualize the Moon related to The Earth as satellite, not as section in page 872 in your astronomy book!</li><li>
+RE:ASSURE! Assure and improve your knowledge! Look for related articles via attached nodes. </li><li>
+RE:STORE! Tap any node of information and it will expand to give you more information. No learning curve required, Very intuitive and very natural interface. As they say a child could use it! Drag and spin the fluid display of knowledge! </li><li>
+RE:LOOK! Look at all knowledge as a whole, or shift into exploring a specific semantic tree mode. No more books! </li><li>
+RE:CREATE! Search, create and share with Facebook! Use Twitter to tell the world, email your friends, or customize to add more services! All in one place for your convenience. </li><li>
+RE:LEARN! ReCredible is great for educational purposes! Explore a wide selection of carefully selected topics, searching and browsing to find an exact information via visual semantic links. </li><li>
+RE:MEMBER! Find the information and improve your memory with ReCredible topic maps! </li><li>
+RE:DISCOVER! Find new information! Expand your knowledge! Use ReCredible! </li></ul>
+
+<h4 style="text-align:right"><em>Demo: <a href="https://itunes.apple.com/us/app/recredible/id620437846?mt=8">https://itunes.apple.com/us/app/recredible/id620437846?mt=8</a></em></h4>
+
+</div>
+
+
 
     
 
