--- a/veni.html
+++ b/veni.html
@@ -151,7 +151,7 @@ FavSync allows users to easily share and sync groups of bookmarks with other use
 <p><h3>Several educational registries (e.g. Schoolforge or Ontoolsearch) provide information about ICT tools in order to help educators when discovering and selecting them. A common problem in these registries -which limits their utility-  is how their data is sustained, since educational descriptions of ICT tools are hard to create and maintain updated. In order to overcome this problem, some registries (e.g. Cool Tools For Schools) involve their communities of users in their sustainment, following a social approach. Unfortunately, three important drawbacks can be found in these registries: first, the well-known cold-start problem is present; second, their data models can not typically describe information about the educational use of ICT tools; third, these registries are isolated data silos that need to create and keep updated all the data they manage, thus increasing the overall effort of sustaining educational ICT tool datasets. For this reason we propose We-Share, a social annotation application that allows educators to search, create and enrich descriptions of ICT tools from the Web of Data. This characteristic enables We-Share to count with an initial dataset of 6760 ICT tool descriptions automatically gathered from the Web, which are automatically updated by periodically crawling the Web of Data. Further, We-Share enables the community of educators to enrich SEEK-AT-WD dataset reviewing ICT tools and relating them to the educational contexts where they were employed. All the data published on We-Share is available as Linked Open Data.<h3></p>
 <p></p>
 
-<h4 style="text-align:right"><em>Demo: <a href=" http://seek.cloud.gsic.tel.uva.es/weshare/”> http://seek.cloud.gsic.tel.uva.es/weshare/</a>. 
+<h4 style="text-align:right"><em>Demo: <a href="http://seek.cloud.gsic.tel.uva.es/weshare/"> http://seek.cloud.gsic.tel.uva.es/weshare/</a>. 
 Its SPARQL endpoint can be accessed at: <a href=”http://seek.rkbexplorer.com/sparql/">http://seek.rkbexplorer.com/sparql/</a></em></h4>
 
 </div>
@@ -175,6 +175,17 @@ RE:DISCOVER! Find new information! Expand your knowledge! Use ReCredible! </li><
 
 </div>
 
+<div id="digitalplanet" name="digitalplanet" class="block">
+
+ 
+<h3><b>Enrichment of Young Digital Planet's biology lessons<b></h3>
+<p><h3><i>Jana Parvanova and Ilian Uzunov</i></h3></p>
+<p><h3>Ontotext, Sirma Media, Sofia, Bulgaria</h3></p>
+<p><h3>We have used biology lessons for 5th grade owned by Young Digital Planet (<a href="http://www.ydp.eu/">http://www.ydp.eu/"</a>).
+We have used a sample of 30 multimedia lessons. At first stage, we parsed the internal format and retrieved text attached to each page. Next, we applied a combination of entity-recognition algorithms and web crawling to fetch additional materials. Sources are mostly dbpedia and Encyclopaedia of Life (eol.org). As a result, we enriched the original multimedia application with additional links and images. When user moves accross pages of a lesson, links on the right change to reflect the content.<h3></p>
+
+<h4 style="text-align:right"><em>Demo: <a href="http://bio-demo.ontotext.com/bio2/">http://bio-demo.ontotext.com/bio2</a></em></h4>
+</div>
 
 
     
