--- a/veni.html
+++ b/veni.html
@@ -181,7 +181,7 @@ RE:DISCOVER! Find new information! Expand your knowledge! Use ReCredible! </li><
 <h3><b>Enrichment of Young Digital Planet's biology lessons<b></h3>
 <p><h3><i>Jana Parvanova and Ilian Uzunov</i></h3></p>
 <p><h3>Ontotext, Sirma Media, Sofia, Bulgaria</h3></p>
-<p><h3>We have used biology lessons for 5th grade owned by Young Digital Planet (<a href="http://www.ydp.eu/">http://www.ydp.eu/"</a>).
+<p><h3>We have used biology lessons for 5th grade owned by Young Digital Planet (<a href="http://www.ydp.eu/">http://www.ydp.eu/</a>).
 We have used a sample of 30 multimedia lessons. At first stage, we parsed the internal format and retrieved text attached to each page. Next, we applied a combination of entity-recognition algorithms and web crawling to fetch additional materials. Sources are mostly dbpedia and Encyclopaedia of Life (eol.org). As a result, we enriched the original multimedia application with additional links and images. When user moves accross pages of a lesson, links on the right change to reflect the content.<h3></p>
 
 <h4 style="text-align:right"><em>Demo: <a href="http://bio-demo.ontotext.com/bio2/">http://bio-demo.ontotext.com/bio2</a></em></h4>
