--- a/veni.html
+++ b/veni.html
@@ -187,8 +187,28 @@ We have used a sample of 30 multimedia lessons. At first stage, we parsed the in
 <h4 style="text-align:right"><em>Demo: <a href="http://bio-demo.ontotext.com/bio2/">http://bio-demo.ontotext.com/bio2</a></em></h4>
 </div>
 
+<div id="globetown" name="globetown" class="block">
 
-    
+
+<h3><b>Globe-Town: open data for sustainable development education<b></h3>
+<p><h3><i>Jack Townsend, Andrea Prieto-Vega, Richard Gomer, Will Fyson, Dom Hobson and Huw Fryer</i></h3></p>
+<p><h3>University of Southampton, and independent, Southampton, UK</h3></p>
+<p><h3>Globe-Town.org opens up the successes and the challenges of sustainable development around the world and what they mean for you, through a fun and informative web application built from open data. With it, you can explore the intersections, tensions and trade-offs between the Òthree pillarsÓ of sustainable development: the environment, the economy and society. In particular, Globe-Town shows how no one is isolated from the consequences of climate change in an interdependent world, and how responding to it presents a world of opportunities to inspire individuals and entrepreneurs. In order to tackle the big challenges of sustainability, people of all ages need to learn how they affect us personally and what we can do about them. Globe-Town does this by connecting the global with the local, so we can explore the risks, responsibilities and opportunities in an increasingly interconnected world. Globe-Town won a top three place at the first international #Apps4Climate competition, held by the World Bank and judged by the chair of the UNFCC, Christiana Figueres.<h3></p>
+
+<h4 style="text-align:right"><em>Demo: <a href="http://www.globe-town.org/">http://www.globe-town.org/</a></em></h4>
+
+</div>
+
+<div id="socialvle" name="socialvle" class="block">
+ 
+<h3><b>Social VLE With Rich Structure Learning Data Using Semantic CMS<b></h3>
+<p><h3><i>Abdulaziz Aldaej and Paul Krause</i></h3></p>
+<p><h3>University of Surrey, Guildford, UK</h3></p>
+<p><h3>After the arrival of the web in the 1990s, educational institutions started to maintain their learning materials within Virtual Learning Environments (VLEs), as the Internet is a significant source of material for many students and teachers. However, there has been less development in the current VLEs in the past few years, which remain heavily centred on single institutions even though the web has been developing (e.g., web 2, web3). There is a clear need to integrate VLEs with the wider and social Web. In our research we have prototyped a simple VLE that makes use of Schema.org and the Semantic Content Management System (SCMS) Drupal to provide a more open, social and linked learning environment. Essentially, we aim to use semantic web technology, basically Linked Data, to develop and enhance VLEs by improving the searching for the learning resources, supporting dynamic content composition for e-Learning services and integrating social networking and media. This paper will introduce and show the specification of our VLE that is still under development.<h3></p>
+
+<h4 style="text-align:right"><em>Demo: <a href="http://sociallearn.cs.surrey.ac.uk">http://sociallearn.cs.surrey.ac.uk</a></em></h4>
+</div>
+
 
         <div class="footer">
 		  <div align="center"><img align="center" src="images/edu_photo.jpg" /></div>
