--- a/veni.html
+++ b/veni.html
@@ -210,6 +210,37 @@ We have used a sample of 30 multimedia lessons. At first stage, we parsed the in
 </div>
 
 
+<div id="mooccounselor" name="mooccounselor" class="block">
+
+
+<h3><b>LinkedIn MOOCs counselor<b></h3>
+<p><h3><i>Emiliano Marmonti</i></h3></p>
+<p><h3>Independent consultant, web semantic enthusiast, La Plata, Argentina</h3></p>
+<p><h3>The application uses LinkedIn API to identify the skills from the profile of the user. It will try to map these skills into more general concepts from a downloaded image of DBpedia and specific SPARQL query. Finally will try to offer MOOCS results from a search against OpenCourseWare API.<h3></p>
+
+<h4 style="text-align:right"><em>Demo: <a href="http://emarmonti.com/contest">http://emarmonti.com/contest</a></em></h4>
+
+</div>
+<div id="knownodes" name="knownodes" class="block">
+
+
+<h3><b>Knownodes - A collaborative project to explore, create and define links between online resources and ideas<b></h3>
+<p><h3><i>Dor Garbash, Mikael Couzic, Liad Magen, Jesse Himmelstein, Alexandre Lejeune, Bruno Martin, Weipeng Kuang, Raphael goujet and Yann Leflour.</i></h3></p>
+<p><h3>CRI - centre de recherche interdisciplinaire, University Paris Descartes, Citizen cyberlab, Paris, France</h3></p>
+<p><h3>Knownodes is a collaborative website that enables anyone to relate, define and explore connections between web-resources and ideas. By providing the context of how resources are related, participants lower the energy barrier for understanding and collaboration around complex knowledge and concepts.
+</h3></p><p><h3>
+In knownodes, the connections between knowledge resources are centers for social interaction and combine together to generate a virtual network of knowledge resources, and user generated content such as ideas and open questions.
+</h3></p><p><h3>Knowledge could be made easier to access by providing context to the knowledge around us. As well as serving as a collaborative, peer-reviewed curative platform of learning resources, state-of-the-art open research questions, and rich media(video, image, text, animation, games)
+</h3></p><p><h3>The platform is open source, free and user-friendly.
+This proof of concept prototype demonstrates how anyone can easily create connections between wikipedia articles to learning resources and explore knowledge via a graph and list interface. We have also prototyped wikipedia api integration for easy retrieval of wikipedia articles.
+Next steps in our roadmap, is to apply a peer-review system, support for further apis for publications and OER and make information in the system available through a browser extension.<h3></p>
+
+<h4 style="text-align:right"><em>Demo: <a href="http://www.knownodes.com">http://www.knownodes.com</a> and <a href="https://github.com/CyberCRI/KnowNodes">https://github.com/CyberCRI/KnowNodes</a></em></h4>
+
+</div>
+
+
+
         <div class="footer">
 		  <div align="center"><img align="center" src="images/edu_photo.jpg" /></div>
           <div id="organisers" name="organisers" class="block">
