--- a/veni.html
+++ b/veni.html
@@ -239,6 +239,30 @@ Next steps in our roadmap, is to apply a peer-review system, support for further
 
 </div>
 
+<div id="melod" name="melod" class="block">
+
+<h3><b>MELOD: Mobile Environment for learning with Linked Open Data<b></h3>
+<p><h3><i>Marco Arrigo, Giovanni Fulantelli and Davide Taibi</i></h3></p>
+<p><h3>National Research Council of Italy - Institute for Educational Technologies, Palermo, Italy</h3></p>
+<p><h3>The MELOD environment has been designed to support, through the use of mobile devices, the informal learning experiences that take place during the visit of a city,. In the last few years, many applications for mobile devices have been developed with the aim of supporting students during a visit experience. One of the main difficulties in designing and managing these applications is related to the content, since usually it must be prepared in advance by the teachers, and maintained during the lifespan of the application, thus requiring an extra effort to organize the information for mobile devices and also to maintain the content updated. MELOD exploits the huge amount of dataset in the Linked Open Data (LOD) cloud to overcome the previous issues, by providing contextualized updated information based on studentsÕ location. The MELOD environment interlinks the DBpedia, Europeana and Geonames datasets with the contextual information of the studentsÕ learning experience. Finally, students social activities, like voting and commenting, are also used to feed new knowledge into the MELOD environment.<h3></p>
+
+<h4 style="text-align:right"><em>Demo: <a href="http://194.119.209.93:8080/GeoFinder/">http://194.119.209.93:8080/GeoFinder/</a></em></h4>
+
+</div>
+
+<div id="yourhistory" name="yourhistory" class="block">
+
+ <h3><b>yourHistory: Personalising Historic Events<b></h3>
+<p><h3><i>Maria-Hendrike Peetz, David Graus, Daan Odijk, Maarten de Rijke and  Ork de Rooij</i></h3></p>
+<p><h3>University of Amsterdam, Amsterdam, The Netherlands</h3></p>
+<p><h3>Students of history often study dates and events that have little to do with their own life. We make history tangible by showing historic events that are personal and based on a user's own interests (his or her Facebook profile). Often, those events are small-scale and escape history books. By linking personal historic events with global events, we aim to link a user's life with global history, in some way allow him to writing his own personal history book. </h3></p>
+<h3><p>We represent a user's Facebook profile as a bag of concepts, by extracting raw text from a profile and applying state-of-the-art entity linking techniques. By leveraging the structured nature of DBPedia we extract historic event entities; these belong to the Event class, or are entities with a startDate-predicate that are not of class Person. We map the DBPedia entities to their corresponding Wikipedia pages. To generate a user's personal timeline, we match his profile entities to the events by applying a variety of similarity metrics. The final selection of historic events a user is presented with is realized through a mix of the user's personal profile, the time spans of his own and, if known, his parents lives, and statistical properties concerning the events. The events in the global history are based on the timeline of modern history available through DBPedia.<h3></p>
+
+<h4 style="text-align:right"><em>Demo: <a href="http://yourhistory.peetz-intelligence.com/">http://yourhistory.peetz-intelligence.com/</a> and <a href="https://apps.facebook.com/yourhistory">https://apps.facebook.com/yourhistory</a></em></h4>
+
+</div>
+
+
 
 
         <div class="footer">
