--- a/veni.html
+++ b/veni.html
@@ -263,6 +263,22 @@ Next steps in our roadmap, is to apply a peer-review system, support for further
 </div>
 
 
+<div id="moocrank" name="moocrank" class="block">
+
+<h3><b>moocrank: recommendation of MOOCs based on learning outcomes<b></h3>
+<p><h3><i>Israel Gutiérrez and Derick Leony</i></h3></p>
+<p><h3>University Carlos III of Madrid, Madrid, Spain</h3></p>
+<p><h3>Massive Open Online Courses are becoming very relevant in the current scope of education. One of the weaknesses presented by current MOOC platforms is the lack of detailed and structured information about the learning outcomes achieved with the course. Moocrank is our proposal to solve this issue by combining open data about learning outcomes and data obtained from the main MOOC platforms (Coursera, Edx, Udacity). A user of Moocrank is able to:
+1. define his/her learning objectives
+2. obtain course recommendations based on those objectives
+3. once he/she completes a course, he/she can provide feedback about the learning outcomes achieved with it<h3></p>
+
+<h4 style="text-align:right"><em>Demo: <a href="http://www.moocrank.com">http://www.moocrank.com</a> and <a href="http://github.com/gootyfer/moocrank">http://github.com/gootyfer/moocrank</a></em></h4>
+
+</div>
+
+
+
 
 
         <div class="footer">
