--- a/veni.html
+++ b/veni.html
@@ -80,9 +80,9 @@
       <div class="content-shifter">
         <div id="toptitle" name="top" class="block">
           <div class="titletext">
-		    <h1 class="title">Veni, Vidi, Vici</h1>
+		    <h1 class="title">Veni Competition</h1>
 			<br />
-			<h1>Three developer competitions sponsored by the LinkedUp Project</h1>
+			<h1>May - June 2013</h1>
 			
             <a href="http://www.europa.eu/" target="_blank"><img src="images/europa_logo.jpg" style="padding:25px" align="right"/></a>
             <a href="http://www.ec.europa.eu/research/fp7" target="_blank"><img src="images/fp7_logo.gif" style="padding:25px;" align="right"/></a>
