--- a/veni.html
+++ b/veni.html
@@ -119,6 +119,16 @@ This is the first time in Scottish history this type of information has been mad
 <h4 style="text-align:right"><em>Demo: <a href="http://github.com:azymuth/lapi.git"> http://github.com:azymuth/lapi.git</a></em></h4>
 </div>
 
+<div id="course" name="dataconf" class="dataconf">
+<h3><b>DataConf: Enriching conference publications with a mobile mashup application<b></h3>
+<p><h3><i>Florian Bacle, Benoît Durant de la Pastellière, Fiona Le Peutrec and Lionel Médini
+</i></h3></p>
+<p><h3>Université Claude Bernard Lyon and LIRIS laboratory (Lyon France)</h3></p>
+<p><h3>DataConf is a mobile Web application that allows browsing conference publications, their authors, authors organizations, and even authors other publications or publications related to the same keywords. It queries a main SPARQL endpoint that serves the conference metadata set, as well as other endpoints and Web services to enrich and explore these data. This application exploits the Linked Data paradigm and performs client-side reasoning. It follows recent W3C technical advances and as a full client-side mashup, requires few server resources. It can easily be configured and deployed for any conference with available metadata on the Web. Its component-based architecture also allows developing extensions that query new data sources. We also propose several custom data sources that allow managing conference events, linking authors and publications to other resources on the Web and locally handling the conference keyword ontology.<h3></p>
+
+<h4 style="text-align:right"><em>Demo: <a href="http://dataconf.liris.cnrs.fr/">http://dataconf.liris.cnrs.fr/</a></em></h4>
+</div>
+
 <div id="hoo" name="hoo" class="block">
 
  <h3><b>Dr Hoo<b></h3>
