--- a/veni.html
+++ b/veni.html
@@ -67,13 +67,13 @@
  	  <div class="nav-collapse">
 		<ul id="nav" class="nav">
         <h3><li><a href="/"><img src="images/logo.png" width="235" height="59" alt="LinkedUp Challenge" /></a></li>
-        <li><a href="#what">What is it?</a></li>
-        <li><a href="#first">Veni competition</a></li>
-        <li><a href="#how">How to enter</a></li>
-		<li><a href="#support">Data and support</a></li>
-		<li><a href="#faq">Frequently Asked Questions</a></li>
-        <li><a href="#contact">Get in touch!</a></li>
-		<li><a href="#usecases">Use cases</a></li></h3>
+        <li><a href="http://linkedup-challenge.org/#what">What is it?</a></li>
+        <li><a href="http://linkedup-challenge.org/#first">Veni competition</a></li>
+        <li><a href="http://linkedup-challenge.org/#how">How to enter</a></li>
+		<li><a href="http://linkedup-challenge.org/#support">Data and support</a></li>
+		<li><a href="http://linkedup-challenge.org/#faq">Frequently Asked Questions</a></li>
+        <li><a href="http://linkedup-challenge.org/#contact">Get in touch!</a></li>
+		<li><a href="http://linkedup-challenge.org/usecases.html">Use cases</a></li></h3>
       </ul>
 	</div>
       
@@ -119,7 +119,7 @@ This is the first time in Scottish history this type of information has been mad
 <h4 style="text-align:right"><em>Demo: <a href="http://github.com:azymuth/lapi.git"> http://github.com:azymuth/lapi.git</a></em></h4>
 </div>
 
-<div id="course" name="dataconf" class="dataconf">
+<div id="dataconf" name="dataconf" class="block">
 <h3><b>DataConf: Enriching conference publications with a mobile mashup application<b></h3>
 <p><h3><i>Florian Bacle, Benoît Durant de la Pastellière, Fiona Le Peutrec and Lionel Médini
 </i></h3></p>
